--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,11 +2,11 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/ruby
 {
     "name": "Ruby",
-    "image": "tccr.io/truecharts/devcontainer:v2.2.1"
+    "image": "tccr.io/truecharts/devcontainer:v2.2.3",
 
     // Set *default* container specific settings.json values on container create.
     "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash"
+        "terminal.integrated.defaultProfile.linux": "bash"
     },
 
     // Add the IDs of extensions you want installed when the container is created.
