Add themePark plugin to Traefik

--- a/charts/core/traefik/questions.yaml
+++ b/charts/core/traefik/questions.yaml
@@ -102,6 +102,11 @@ questions:
                 schema:
                   type: boolean
                   default: false
+              - variable: enableThemePark
+                label: "Enable theme.park"
+                schema:
+                  type: boolean
+                  default: false
 
   - variable: ingressClass
     label: "ingressClass"
