Fix plugin structure

--- a/charts/stable/sonarr/values.yaml
+++ b/charts/stable/sonarr/values.yaml
@@ -35,3 +35,8 @@ persistence:
   config:
     enabled: true
     mountPath: "/config"
+
+ingress:
+  main:
+    middlewares:
+      - sonarr@kubernetescrd
