--- a/charts/core/traefik/templates/common.yaml
+++ b/charts/core/traefik/templates/common.yaml
@@ -1,4 +1,6 @@
 {{/* Make sure all variables are set properly */}}
+
+{{- include "traefik.plugins.setup" . }}
 {{- include "common.setup" . }}
 
 {{- if .Values.metrics }}
